# How_I_Trained_AI_Agents

./: README.md  crew.py  main.py  pyproject.toml  requirements.txt  settings.json
research_agents/: README.md  pyproject.toml  report.md  training_data.pkl
research_agents/src/research_agents/: crew.py  main.py
