[tool.poetry]
name = "research_agents"
version = "0.1.0"
description = "research_agents using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
research_agents = "main:run"
run_crew = "main:run"
train = "main:train"
replay = "main:replay"
test = "main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
